--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run copy-heartbeat-worker && next build",
-    "copy-heartbeat-worker": "sh ./scripts/copy-heartbeat-worker.sh",
+    "build": "next build",
+    "copy-heartbeat-worker": "node scripts/copy-heartbeat-worker.js",
     "start": "next start -p 3000",
     "lint": "next lint"
   },
@@ -26,6 +26,7 @@
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.17",
+    "ignore-loader": "^0.1.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
