--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run copy-heartbeat-worker && next build",
     "copy-heartbeat-worker": "node scripts/copy-heartbeat-worker.js",
     "start": "next start -p 3000",
     "lint": "next lint"
